# template-haskell

./: .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CHANGELOG.md  GitpodTemplate.cabal  LICENSE  README.md  gitpod-template.cabal  package.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
app/: Main.hs
src/: GitpodTemplate.hs
