cabal-version:      2.4
name:               gitpod-template
version:            0.1.0.0
synopsis:           See README for more info
tested-with:        GHC==8.10.7

-- A longer description of the package.
-- description:
homepage:           https://github.com/gitpod-io/template-haskell

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Gitpod
maintainer:         contact@gitpod.io

-- A copyright notice.
-- copyright:
category:           Example
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable gitpod-template
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        gitpod-template

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite gitpod-template-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
